<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/copy"
          android:title="@string/copy"
          android:icon="@drawable/ic_copy"
          android:showAsAction="ifRoom"/>
    <item android:id="@+id/cut"
          android:title="@string/cut"
          android:icon="@drawable/ic_cut"
          android:showAsAction="ifRoom"/>
    <item android:id="@+id/delete"
          android:title="@string/delete"
          android:icon="@drawable/ic_delete"
          android:showAsAction="ifRoom"/>
    <item android:id="@+id/selectAll"
          android:title="@string/selectAll"
          android:icon="@drawable/ic_selectall"
          android:showAsAction="ifRoom"/>
    <item android:id="@+id/zip"
          android:title="@string/zip"/>

</menu>