<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/welcome_header"
            android:textColor="@color/cabinet_color"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="@dimen/welcome_header_margin_top"
            android:layout_marginLeft="24dp"
            android:text="@string/welcome"
            android:fontFamily="sans-serif-light"
            android:textStyle="italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_intro"
            android:layout_marginBottom="5dp"
            android:textSize="@dimen/welcome_summary_textsize"
            android:lineSpacingMultiplier="1.6"
            android:paddingTop="10dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:fontFamily="sans-serif-light" />

        <ViewStub
            android:id="@+id/fileCardStub"
            android:inflatedId="@+id/fileCard"
            android:layout="@layout/list_item_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_conclusion"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:textSize="@dimen/welcome_summary_textsize"
            android:lineSpacingMultiplier="1.6"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:fontFamily="sans-serif-light" />

        <Button
            android:id="@+id/finish"
            android:layout_width="match_parent"
            android:layout_height="@dimen/welcome_button_height"
            android:text="@string/lets_go"
            android:layout_marginBottom="16dp" />

    </LinearLayout>

</ScrollView>